--- a/GameOfLifeV2/Packages/manifest.json
+++ b/GameOfLifeV2/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.collections": "0.4.0-preview.6",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.1.3",
+    "com.unity.recorder": "2.1.0-preview.1",
     "com.unity.rendering.hybrid": "0.3.1-preview.10",
     "com.unity.test-framework": "1.1.3",
     "com.unity.textmeshpro": "2.0.1",
