--- a/GameOfLifeV2/Packages/manifest.json
+++ b/GameOfLifeV2/Packages/manifest.json
@@ -1,15 +1,18 @@
 {
   "dependencies": {
+    "com.unity.burst": "1.2.0",
     "com.unity.collab-proxy": "1.2.16",
-    "com.unity.collections": "0.4.0-preview.6",
+    "com.unity.collections": "0.5.0-preview.9",
+    "com.unity.entities": "0.5.0-preview.17",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.1.3",
     "com.unity.recorder": "2.1.0-preview.1",
-    "com.unity.rendering.hybrid": "0.3.1-preview.10",
-    "com.unity.test-framework": "1.1.3",
+    "com.unity.rendering.hybrid": "0.3.2-preview.17",
+    "com.unity.test-framework": "1.1.9",
     "com.unity.textmeshpro": "2.0.1",
-    "com.unity.timeline": "1.2.6",
+    "com.unity.timeline": "1.2.10",
     "com.unity.ugui": "1.0.0",
+    "nuget.mono-cecil": "0.1.6-preview",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
