--- a/GameOfLifeV2/Packages/manifest.json
+++ b/GameOfLifeV2/Packages/manifest.json
@@ -1,16 +1,16 @@
 {
   "dependencies": {
-    "com.unity.burst": "1.2.3",
+    "com.unity.burst": "1.3.0-preview.6",
     "com.unity.collab-proxy": "1.2.16",
-    "com.unity.collections": "0.5.2-preview.8",
-    "com.unity.entities": "0.6.0-preview.24",
+    "com.unity.collections": "0.7.0-preview.2",
+    "com.unity.entities": "0.8.0-preview.8",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.1.4",
     "com.unity.platforms": "0.2.1-preview.2",
     "com.unity.recorder": "2.1.0-preview.1",
     "com.unity.render-pipelines.core": "7.1.8",
     "com.unity.render-pipelines.high-definition": "7.1.8",
-    "com.unity.rendering.hybrid": "0.3.3-preview.11",
+    "com.unity.rendering.hybrid": "0.4.0-preview.8",
     "com.unity.test-framework": "1.1.11",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.2.12",
