--- a/GameOfLifeV2/Packages/manifest.json
+++ b/GameOfLifeV2/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.addressables": "1.7.4",
     "com.unity.burst": "1.3.0-preview.6",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.collections": "0.7.0-preview.2",
