Update to newer HDRP package for Hybrid Renderer V2 support

--- a/GameOfLifeV3/Packages/manifest.json
+++ b/GameOfLifeV3/Packages/manifest.json
@@ -10,8 +10,8 @@
     "com.unity.ide.vscode": "1.1.4",
     "com.unity.platforms": "0.2.1-preview.8",
     "com.unity.recorder": "2.1.0-preview.1",
-    "com.unity.render-pipelines.core": "8.0.1",
-    "com.unity.render-pipelines.high-definition": "8.0.1",
+    "com.unity.render-pipelines.core": "9.0.0-preview.13",
+    "com.unity.render-pipelines.high-definition": "9.0.0-preview.13",
     "com.unity.rendering.hybrid": "0.4.0-preview.8",
     "com.unity.test-framework": "1.1.13",
     "com.unity.textmeshpro": "3.0.0-preview.1",
