--- a/GameOfLifeV3/Packages/manifest.json
+++ b/GameOfLifeV3/Packages/manifest.json
@@ -1,19 +1,21 @@
 {
   "dependencies": {
-    "com.unity.addressables": "1.7.4",
-    "com.unity.burst": "1.3.0-preview.9",
+    "com.unity.addressables": "1.8.4",
+    "com.unity.burst": "1.3.2",
     "com.unity.collab-proxy": "1.3.7",
-    "com.unity.collections": "0.7.0-preview.2",
-    "com.unity.entities": "0.8.0-preview.8",
+    "com.unity.collections": "0.9.0-preview.6",
+    "com.unity.dots.editor": "0.8.0-preview.1",
+    "com.unity.entities": "0.11.1-preview.4",
     "com.unity.ide.rider": "1.2.1",
-    "com.unity.ide.visualstudio": "2.0.0",
-    "com.unity.ide.vscode": "1.1.4",
+    "com.unity.ide.visualstudio": "2.0.2",
+    "com.unity.ide.vscode": "1.2.1",
     "com.unity.platforms": "0.2.1-preview.8",
-    "com.unity.recorder": "2.1.0-preview.1",
+    "com.unity.platforms.windows": "0.5.0-preview.6",
+    "com.unity.recorder": "2.2.0-preview.4",
     "com.unity.render-pipelines.core": "9.0.0-preview.13",
     "com.unity.render-pipelines.high-definition": "9.0.0-preview.13",
-    "com.unity.rendering.hybrid": "0.4.0-preview.8",
-    "com.unity.test-framework": "1.1.13",
+    "com.unity.rendering.hybrid": "0.5.2-preview.4",
+    "com.unity.test-framework": "1.1.14",
     "com.unity.textmeshpro": "3.0.0-preview.1",
     "com.unity.timeline": "1.2.12",
     "com.unity.ugui": "1.0.0",
